force-app/main/default/objects/Training__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Relationship Management (CRM)</fullName>
            </value>
            <value>
                <fullName>Web Development</fullName>
            </value>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>Mobile App Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>