force-app/main/default/objects/Training__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Technology__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Zoho</fullName>
            </value>
            <value>
                <fullName>Seibel</fullName>
            </value>
            <value>
                <fullName>HTML/CSS</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>Angular</fullName>
            </value>
            <value>
                <fullName>Vue.js</fullName>
            </value>
            <value>
                <fullName>Amazon Web Services (AWS)</fullName>
            </value>
            <value>
                <fullName>Microsoft Azure</fullName>
            </value>
            <value>
                <fullName>Google Cloud Platform (GCP)</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>iOS (Swift)</fullName>
            </value>
            <value>
                <fullName>React Native</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>