force-app/main/default/objects/Training__c/fields/Training_Co_ordinator__c.field-meta.xml
<CustomField>
    <fullName>Training_Co_ordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Co-ordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>